--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ matrix:
   - python: pypy
   - python: '2.7'
 install:
+- pip install -U pip setuptools wheel
+- pip install 'cryptography < 1.0' 'lxml < 3.5'
 - pip install .
 script:
 - "$(type -p trial) documint"
