--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ matrix:
   - python: '2.7'
 install:
 - pip install -U pip setuptools wheel
-- pip install 'cryptography < 1.0' 'lxml < 3.5'
-- pip install .
+- pip install -r requirements.txt
 script:
 - "$(type -p trial) documint"
 notifications:
