--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 .
-cffi==1.3.1; platform_python_implementation != 'PyPy'
-https://github.com/mithrandi/lxml/releases/download/lxml-3.4.0%2Bcffi.1/lxml-3.4.0.cffi.1-pp27-none-linux_x86_64.whl; platform_python_implementation == 'PyPy'
+cffi==1.5.0; platform_python_implementation != 'PyPy'
+lxml-cffi==3.4.0; platform_python_implementation == 'PyPy'
 lxml==3.5.0; platform_python_implementation != 'PyPy'
 cryptography==0.9.3; platform_python_implementation == 'PyPy'
 cryptography==1.1.1; platform_python_implementation != 'PyPy'
