--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
     pyenv global pypy-4.0.1
   fi
 - pip install -U pip setuptools wheel
-- pip install -r requirements.txt
+- pip install -r requirements.txt .
 script:
 - "$(type -p trial) documint"
 notifications:
