--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,15 @@ default_section=THIRDPARTY
 multi_line_output=4
 lines_after_imports=3
 balanced_wrapping=True
+
+# See the docstring in versioneer.py for instructions. Note that you must
+# re-run 'versioneer.py setup' after changing this section, and commit the
+# resulting files.
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = documint/_version.py
+versionfile_build = documint/_version.py
+tag_prefix = v
+parentdir_prefix = Documint
