--- a/setup.cfg
+++ b/setup.cfg
@@ -14,5 +14,5 @@ VCS = git
 style = pep440
 versionfile_source = documint/_version.py
 versionfile_build = documint/_version.py
-tag_prefix = v
+tag_prefix = ""
 parentdir_prefix = Documint
