--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,13 @@
 #
 #    pip-compile requirements.in
 #
-cffi==1.5.0; platform_python_implementation != 'PyPy'
+cffi==1.5.2; platform_python_implementation != 'PyPy'
 characteristic==14.3.0    # via service-identity
 cryptography==1.3.1       # via pyopenssl
 enum34==1.1.2             # via cryptography
 idna==2.1                 # via cryptography, twisted
 ipaddress==1.0.16         # via cryptography
-lxml-cffi==3.4.0.1; platform_python_implementation == 'PyPy'
-lxml==3.5.0; platform_python_implementation != 'PyPy'
+lxml==3.6.0
 pyasn1-modules==0.0.8     # via service-identity
 pyasn1==0.1.9             # via cryptography, pyasn1-modules, service-identity
 pyopenssl==16.0.0         # via service-identity, twisted
