--- a/.travis.yml
+++ b/.travis.yml
@@ -9,18 +9,16 @@ sudo: false
 dist: trusty
 matrix:
   include:
-  - python: pypy
-  - python: '2.7'
+  - env: PYTHON_VERSION=pypy-5.7.1
+  - env: PYTHON_VERSION=python-2.7.13
 install:
 - |
-  if [ "${TRAVIS_PYTHON_VERSION}" == "pypy" ]; then
-    git clone https://github.com/yyuu/pyenv.git ~/.pyenv
-    PYENV_ROOT="$HOME/.pyenv"
-    PATH="$PYENV_ROOT/bin:$PATH"
-    eval "$(pyenv init -)"
-    pyenv install pypy-5.7.1
-    pyenv global pypy-5.7.1
-  fi
+  git clone https://github.com/yyuu/pyenv.git ~/.pyenv
+  PYENV_ROOT="$HOME/.pyenv"
+  PATH="$PYENV_ROOT/bin:$PATH"
+  eval "$(pyenv init -)"
+  pyenv install $PYTHON_VERSION
+  pyenv global $PYTHON_VERSION
 - pip install -U pip setuptools wheel
 - pip install -r requirements.txt .
 script:
