--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ dist: trusty
 matrix:
   include:
   - env: PYTHON_VERSION=pypy-5.7.1
-  - env: PYTHON_VERSION=python-2.7.13
+  - env: PYTHON_VERSION=2.7.13
 install:
 - |
-  git clone https://github.com/yyuu/pyenv.git ~/.pyenv
-  PYENV_ROOT="$HOME/.pyenv"
+  git clone https://github.com/yyuu/pyenv.git $HOME/fusion-pyenv
+  PYENV_ROOT="$HOME/fusion-pyenv"
   PATH="$PYENV_ROOT/bin:$PATH"
   eval "$(pyenv init -)"
   pyenv install $PYTHON_VERSION
