--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,13 @@ language: python
 cache:
   directories:
   - "$HOME/.cache/pip"
-  - "$HOME/fusion-pyenv-cache"
 sudo: false
 dist: trusty
 group: edge
 matrix:
   include:
-  - env: PYTHON_VERSION=pypy-5.9.0
-  - env: PYTHON_VERSION=2.7.13
+  - python: pypy-5.9.0
+  - python: 2.7.13
 install:
 - pip install -U pip setuptools wheel
 - pip install -r requirements.txt .
