--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ dist: trusty
 group: edge
 matrix:
   include:
-  - python: pypy-5.9.0
+  - python: pypy2.7-5.9.0
   - python: 2.7.13
 install:
 - pip install -U pip setuptools wheel
